--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Retro Bowl - Retro Bowl</title>
     <meta name="keywords" content="retro bowl">
     <meta name="news_keywords" content="retro bowl">
-    <meta name="description" content="Retro Bowl - Retro Bowl">
+    <meta name="description" content="Retro Bowl is an American football simulation game where you become the head coach and lead your team to spectacular victories.">
     <link rel="stylesheet" type="text/css" href="rs/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -276,4 +276,5 @@
     <script src="rs/js/footer.js"></script>
 </footer>
 </body>
+
 </html>
