--- a/retro-bowl-2.html
+++ b/retro-bowl-2.html
@@ -232,7 +232,7 @@
                             </div>
                         </div>
                         <div class="text-area--content">
-                            <h2>About Retro Bowl 2</h2><p><strong>Retro Bowl 2</strong> is the sequel to the game Retro Bowl, where you manage a baseball team from recruiting and upgrading to participating in exciting matches.</p>
+                            <h2>About Retro Bowl 2</h2><p><strong>Retro Bowl 2</strong> is the sequel to the game <a href="https://retrobowl-76.github.io/">Retro Bowl</a>, where you manage a baseball team from recruiting and upgrading to participating in exciting matches.</p>
 <h2>Retro Bowl 2: Become a Legendary Coach in This Classic Football Game</h2>
 <p>Retro Bowl 2 is the highly anticipated sequel to the hit game Retro Bowl, bringing back the charm of pixelated sports with 8-bit graphics and retro soundtracks. Step into the dual role of coach and manager as you lead your football team through competitive seasons, where strategy and team spirit are key to victory.</p>
 <h2>Gameplay &amp; Mechanics: Manage, Strategize, and Take Control</h2>
@@ -262,4 +262,5 @@
     <script src="rs/js/footer.js"></script>
 </footer>
 </body>
+
 </html>
